--- a/package.json
+++ b/package.json
@@ -13,5 +13,11 @@
     "React"
   ],
   "author": "Avijeet Pandey",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.10.9"
+  }
 }
