--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.1",
+    "react-clock": "^3.0.0",
     "react-dom": "^17.0.1",
     "react-resizable": "^1.11.0",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
