--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "re-resizable": "^6.7.0",
     "react": "^17.0.1",
     "react-clock": "^3.0.0",
     "react-dom": "^17.0.1",
-    "react-resizable": "^1.11.0",
     "react-scripts": "3.4.4",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.0"
